# Teams

./: .clangd  .env  .gitignore  README.md  TODO.md  docker-compose.yml  oui.sh  run.sh
TeamsClient_/: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Info.plist  README.md  main.cpp  mainwindow.cpp  mainwindow.h  message2window.cpp  message2window.h  messagewindow.cpp  messagewindow.h
TeamsClient_/.cache/clangd/index/: Application.cpp.9C687B2478EB1C6C.idx  Application.h.43B22BDF80344AA6.idx  AuthService.cpp.DA56B80CF84E30FC.idx  AuthService.h.34A171490AEB8344.idx  AuthViewModel.cpp.BB4B5CB3F7F0B7EE.idx  AuthViewModel.h.2905DA58B7959B8A.idx  DatabaseManager.cpp.BCBFAFDA4B99B64E.idx  DatabaseManager.h.542C5B7B7A90A1AA.idx  FrameConverter.cpp.26EAC404E4491CFA.idx  FrameConverter.h.B5A5E160F3154750.idx  IAuthService.h.52E8949065934C12.idx  ISessionService.h.C6BB71A80489FE70.idx  ITokenManager.h.D763359F2896D3EB.idx  IUserService.h.18C252F65EFBC511.idx  LocalVideoSource.h.5A533CE483DD0949.idx  NetworkService.cpp.422FA8847AB841C1.idx  NetworkService.h.540BBC4BA1C9EF99.idx  PConnectionController.cpp.EE8871BD1D211E51.idx  PConnectionController.h.CD3CA20D855B0EB3.idx  PConnectionObserver.cpp.6B793D99E2E9C1F7.idx  PConnectionObserver.h.69B4180FAB153DAB.idx  RemoteVideoSource.h.328B18C75A761FAF.idx  ServiceLocator.cpp.A5FF98FF10A25791.idx  ServiceLocator.h.842F63D7660BFA00.idx  SessionService.cpp.43D9BC1A0C9E7D6C.idx  SessionService.h.3B4B2275F91738F6.idx  SessionState.cpp.58F4482BE2D92AB0.idx  SessionState.h.2FCC438CE6F5F8F2.idx  Sources.cpp.2AD9BD62F0CDEA52.idx  (+24 more)
TeamsClient_/Atoms/: Button.cpp  Button.h  InputField.cpp  InputField.h
TeamsClient_/Molecules/: LoginWidget.cpp  LoginWidget.h  RegisterWidget.cpp  RegisterWidget.h
TeamsClient_/Network/: AuthManager.cpp  AuthManager.h  MessageManager.h  NetworkManager.cpp  NetworkManager.h  NetworkTest.cpp  NetworkTest.h
TeamsClient_/Organisms/: Auth.cpp  Auth.h  AuthUI.cpp  AuthUI.h
TeamsClient_/Tests/: test_auth.cpp  test_button.cpp  test_inputfield.cpp  test_main.cpp  var.cpp
TeamsClient_/Tests/ModelTests/: User.cpp  UserTest.cpp  UserTest.h
TeamsClient_/Tests/ServiceTests/: AuthNetworkServiceTest.cpp  AuthNetworkServiceTest.h  AuthServiceTest.cpp  AuthServiceTest.h  Fakes.h  MockAuthService.h  SessionServiceTest.cpp  SessionServiceTest.h
TeamsClient_/Tests/ViewModelTests/: AuthViewModelTest.cpp  AuthViewModelTest.h
TeamsClient_/resources/qss/: styles.qss
TeamsClient_/src/: includes.h  main.cpp  mainwindow.ui  webrtc_includes.h
TeamsClient_/src/Core/: Application.cpp  Application.h  ModelLocator.cpp  ModelLocator.h  ServiceLocator.cpp  ServiceLocator.h  StateLocator.cpp  StateLocator.h  ViewLocator.cpp  ViewLocator.h  ViewModelsLocator.cpp  ViewModelsLocator.h
TeamsClient_/src/Database/: DatabaseManager.cpp  DatabaseManager.h
TeamsClient_/src/Models/: ContactList.cpp  ContactList.h  Message.cpp  Message.h  MessageList.cpp  MessageList.h  SearchResults.cpp  SearchResults.h  User.cpp  User.h  UserList.cpp  UserList.h
TeamsClient_/src/QML/: AuthView.qml  CMakeLists.txt  CallWindow.qml  ContactItem.qml  HomeView.qml  LoadingView.qml  Main.qml  MessageView.qml  WorkspaceView.qml  main.cpp
TeamsClient_/src/Repositories/: MessageRepository.cpp  MessageRepository.h  UserRepository.cpp  UserRepository.h
TeamsClient_/src/Services/: AuthNetworkService.cpp  AuthNetworkService.h  AuthService.cpp  AuthService.h  ChatService.cpp  ChatService.h  DBService.h  IAuthService.h  LocalUserService.cpp  LocalUserService.h  LocalVideoSource.h  NetworkService.cpp  NetworkService.h  PConnectionController.cpp  PConnectionController.h  PConnectionObserver.cpp  PConnectionObserver.h  RemoteVideoSource.h  SessionService.cpp  SessionService.h  SignalingClient.cpp  SignalingClient.h  Sources.cpp  Sources.h  UserService.cpp  UserService.h  WebRTCObservers.h  WebRTCService.cpp  WebRTCService.h  WebSocketService.h
TeamsClient_/src/Utils/: Constants.h  FrameConverter.cpp  FrameConverter.h  TokenManager.cpp  TokenManager.h
TeamsClient_/src/ViewModels/: AuthViewModel.cpp  AuthViewModel.h  ChatViewModel.cpp  ChatViewModel.h  ViewModelsTools.h  WebRTCViewModel.cpp  WebRTCViewModel.h
TeamsClient_/src/Views/: mainwindow.cpp  mainwindow.h
TeamsClient_/tests/: test_database.cpp
TeamsServer_/: .env  CMakeLists.txt  README.md  docker-compose.yml  dockerfile
TeamsServer_/Tests/: includes.h
TeamsServer_/Tests/Database/: TestQueryBuilder.cpp
TeamsServer_/Tests/Integration/: HandlerIntegration.cpp  UserRepositoryIntegration.cpp
TeamsServer_/Tests/Mocks/: MockAuthService.h  MockUserRepository.h
TeamsServer_/Tests/Services/: TestAuthService.cpp
TeamsServer_/Tests/Utils/: TestConfig.cpp  TestCrypto.cpp  TestResponseFormater.cpp
TeamsServer_/certs/: server.crt  server.key
TeamsServer_/src/: AppCompositionRoot.cpp  AppCompositionRoot.h  Client.cpp  Client.h  Server.cpp  Server.h  Session.cpp  Session.h  includes.h  main.cpp
TeamsServer_/src/Database/: AuthRepository.cpp  AuthRepository.h  ConnectionPool.cpp  ConnectionPool.h  Database.cpp  Database.h  DatabaseContext.cpp  DatabaseContext.h  DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseTools.h
TeamsServer_/src/Errors/: ErrorManager.cpp  ErrorManager.h
TeamsServer_/src/Handlers/: AuthHandler.cpp  AuthHandler.h  ContactHandler.cpp  ContactHandler.h  Handler.cpp  Handler.h  HandlerTools.h  MessageHandler.cpp  MessageHandler.h  WebRTCHandler.cpp  WebRTCHandler.h
TeamsServer_/src/Repositories/: AuthRepository.cpp  AuthRepository.h  RepositoriesTools.h
TeamsServer_/src/Servers/: AuthServer.cpp  AuthServer.h  MessageServer.cpp  MessageServer.h  VisioServer.cpp  VisioServer.h
TeamsServer_/src/Services/: AuthService.cpp  AuthService.h  NatsClient.cpp  NatsClient.h  ServicesTools.h
TeamsServer_/src/Sessions/: AuthSession.cpp  AuthSession.h  MessageSession.cpp  MessageSession.h  SessionTools.h
TeamsServer_/src/Structs/: NatsReplyContext.h  User.h
TeamsServer_/src/Utils/: BoostErrorHandler.h  Config.cpp  Config.h  Crypto.h  PacketHelper.h  ResponseFormater.h
(+149 files in other folders)
